# napari-czitools

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  debug_czi_error.py  debug_metadata.py  how_to_release.md  napari-czi.sh  pyproject.toml  tox.ini
.github/: copilot-instructions.md  prompts.txt
.github/pr_decriptions/: pr_superqt_slider_and_ci_node24.md  pr_use_czitools_v0.15.0.md
.github/workflows/: min_example.yml  test.yml  test_and_deploy.yml  test_and_deploy_pypi.yml  test_and_deploy_testpypi.yml
RELEASE_NOTES/: v0.10.0.md
_release_notes/: v0.0.10.md  v0.0.11.md  v0.0.9.md
scripts/: check_aicspylibczi.py  check_lazy_loading.py  ci_debug.py
src/experimental/: _check.py  doublerange_slider.py  maguigui_czi.py  range_sldier_test_3.py  range_slider.py  range_slider_pyqt5.py  range_slider_test.py  range_slider_triangle_rb.py  read__nested.py  test_rspyqt5.py  toggle_wigets.py  try_array_from_url.py
src/napari_czitools/: __init__.py  _check.py  _datatreewidget.py  _doublerange_slider.py  _io.py  _metadata_widget.py  _range_widget.py  _reader.py  _sample_data.py  _utilities.py  _widget copy.py  _widget.py  extract_metadata.py  napari copy.yaml  napari.yaml  try_array_from_url.py
src/napari_czitools/_tests/: conftest.py  test__io.py  test__utilities.py  test_doublerange_slider.py  test_file_changed.py  test_headless_check.py  test_metadata_widget.py  test_range_widget.py  test_reader.py  test_sample_data.py  test_sample_exception.py  test_scene_constraint.py  test_type_column.py  test_url_metadata.py  test_utilities.py  test_widget.py  test_widget_comprehensive.py  try_array_from_url.py
