[project]
name = "napari-czitools"
dynamic = ["version"]
description = "Plugin to read CZI image files and their metadata"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Sebastian Rhode"},
  {email = "sebrhode@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "superqt",
    "scikit-image",
    "pyqtgraph",
    "czitools>=0.13.1"
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "pytest-timeout",
    "pytest-forked",  # Required to prevent CZI + Qt Abort crashes on Linux
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-czitools = "napari_czitools:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/sebi06/napari-czitools/issues"
"Documentation" = "https://github.com/sebi06/napari-czitools#README.md"
"Source Code" = "https://github.com/sebi06/napari-czitools"
"User Support" = "https://github.com/sebi06/napari-czitools/issues"

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"napari_czitools" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_czitools/_version.py"
fallback_version = "0.0.1+nogit"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", # flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501",
    "UP006", "UP007",
    "SIM117",
]
exclude = [
    ".git", ".tox", "build", "dist", "venv",
]
target-version = "py312"
fix = true

[tool.pytest.ini_options]
# --forked ensures each test runs in its own process,
# preventing the C++ library from conflicting with a previously loaded Qt environment.
addopts = "--forked -v --color=yes"
markers = [
    "qtbot: mark test as requiring Qt (uses pytest-qt)",
    "network: mark test as requiring network access"
]
